--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@
 }
 
 body {
-  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', cursive, sans-serif;
+  font-family: 'Nunito', sans-serif;
   touch-action: manipulation;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
