--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   height: 100vh;
   position: relative;
   touch-action: none;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 /* Floating neighborhood details overlay */
